entity_macros/tests/ui/derive/ent/unsupported-enum.stderr
error: Expected struct
 --> $DIR/unsupported-enum.rs:4:1
  |
4 | enum TestEnt {
  | ^^^^
